# CSC-582-ASSIGNMENT

./: .gitignore  ANDGate.cpp  ANDGate.h  CMakeLists.txt  Doxyfile  README.md  fourbitadder.cpp  test.cpp
circuits/: FullAdder.cpp  FullAdder.h  HalfAdder.cpp  HalfAdder.h
html/: index.html  md__r_e_a_d_m_e.html  pages.html
latex/: refman.tex
logic_gates/: ANDGate.cpp  ANDGate.h  ORGate.cpp  ORGate.h
source/: CMakeLists.txt
source/FourBitAdder/: FourBitAdder.h  FullAdder.h  HalfAdder.h
source/FourBitAdder/intern/: FourBitAdder.cpp  FullAdder.cpp  HalfAdder.cpp
tests/gtests/: ANDGateTest.cpp  FullAdderTest.cpp  GTestFourBitAdder.cpp  GTestFullAdder.cpp  GTestLogicGates.cpp  HalfAdderTest.cpp
